@@ -25,6 +25,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fixed AWS Lambda instrumentation for AWS handler classes with input object types that are not AWS Events classes  - {pull}2551[#2551]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
